Delete Table addded
